[fix] scroll at overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: auto;
+    overflow: auto;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
@@ -12,8 +13,7 @@
 }
 
 body {
-    width: 100%;
-    overflow: auto;
+    width: 60%;
     background-image: url("assets/background2.jpg");
     background-color: #130d0d;
     background-attachment: fixed;
@@ -141,7 +141,7 @@ a:visited   {
 }
 
 .container-main {
-    width: 50%;
+    width: 100%;
     padding: 2%;
     box-sizing: border-box;
     align-items: center;
